--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "gulp-uglify": "~0.2.0",
     "gulp-minify-css": "~0.3.0",
     "express": "^3.4.8",
-    "path": "~0.4.9"
+    "path": "~0.4.9",
+    "gulp-autoprefixer": "^1.0.1"
   }
 }
